final working version

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <h1>Guess The Word! 90's Slang</h1>
     <p id="number-of-wins"></p>
     <p id="number-of-losses"></p>
     <p id="guess-this-word"></p>
